--- a/style.css
+++ b/style.css
@@ -184,7 +184,8 @@ body {
     width: auto;
     height: auto;
     margin: 56px;
-    background-color: var(--accentColor);
+    /* background-color: var(--accentColor); */
+    background-color: #223344;
     /* transform: rotate(32deg); */
     transform: scale(0);
     transition: .5s ease-in-out;
